--- a/conf/conf.yaml.template
+++ b/conf/conf.yaml.template
@@ -1,11 +1,11 @@
 data_schema_dir: ../data/schemas
 ngram_len: 40
-test_run: True
+test_run: False
 new_data_pull: False
 client_secret: Y0urSecret
 client_id: Y0urID
 subreddit: StarWars
 history_num_days: 400
-raw_observations_feather_path: ../data/serialized/raw_observations.feather
-x_maxlen: 100
+raw_observations_feather_path: ../data/serialized/raw_observations_400.feather
+x_maxlen: 2000
 model_checkpoint_path: ../data/output/model_checkpoints
